fix bug 403275, crash in [@ nsMsgAsyncWriteProtocol::UnblockPostReader()], r=neil